// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton disables the button when the disabled prop is true: IconButton Disabled 1`] = `
<body>
  <div>
    <button
      class="icon-button  "
      disabled=""
    >
      <svg
        fill="currentColor"
        id="Plus"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="23 11 23 13 13 13 13 23 11 23 11 13 1 13 1 11 11 11 11 1 13 1 13 11 23 11"
        />
      </svg>
    </button>
  </div>
</body>
`;

exports[`IconButton renders arrow left icon: IconButton Arrow Left 1`] = `
<body>
  <div>
    <button
      class="icon-button  "
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 11v2H8v2H6v-2H4v-2h2V9h2v2h12zM10 7H8v2h2V7zm0 0h2V5h-2v2zm0 10H8v-2h2v2zm0 0h2v2h-2v-2z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</body>
`;

exports[`IconButton renders chveron left icon: IconButton Chevron Left 1`] = `
<body>
  <div>
    <button
      class="icon-button  "
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 5v2h-2V5h2zm-4 4V7h2v2h-2zm-2 2V9h2v2h-2zm0 2H8v-2h2v2zm2 2v-2h-2v2h2zm0 0h2v2h-2v-2zm4 4v-2h-2v2h2z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</body>
`;

exports[`IconButton renders chveron right icon: IconButton Chevron Right 1`] = `
<body>
  <div>
    <button
      class="icon-button  "
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 5v2h2V5H8zm4 4V7h-2v2h2zm2 2V9h-2v2h2zm0 2h2v-2h-2v2zm-2 2v-2h2v2h-2zm0 0h-2v2h2v-2zm-4 4v-2h2v2H8z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</body>
`;

exports[`IconButton renders close icon: IconButton Close 1`] = `
<body>
  <div>
    <button
      class="icon-button  "
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 5h2v2H5V5zm4 4H7V7h2v2zm2 2H9V9h2v2zm2 0h-2v2H9v2H7v2H5v2h2v-2h2v-2h2v-2h2v2h2v2h2v2h2v-2h-2v-2h-2v-2h-2v-2zm2-2v2h-2V9h2zm2-2v2h-2V7h2zm0 0V5h2v2h-2z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</body>
`;

exports[`IconButton renders minus icon: IconButton Minus 1`] = `
<body>
  <div>
    <button
      class="icon-button  "
    >
      <svg
        fill="currentColor"
        id="Minus"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="2"
          width="22"
          x="1"
          y="11"
        />
      </svg>
    </button>
  </div>
</body>
`;

exports[`IconButton renders plus icon: IconButton Plus 1`] = `
<body>
  <div>
    <button
      class="icon-button  "
    >
      <svg
        fill="currentColor"
        id="Plus"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="23 11 23 13 13 13 13 23 11 23 11 13 1 13 1 11 11 11 11 1 13 1 13 11 23 11"
        />
      </svg>
    </button>
  </div>
</body>
`;

exports[`IconButton renders the large icon button correctly: IconButton Large 1`] = `
<body>
  <div>
    <button
      class="icon-button large "
    >
      <svg
        fill="currentColor"
        id="Plus"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="23 11 23 13 13 13 13 23 11 23 11 13 1 13 1 11 11 11 11 1 13 1 13 11 23 11"
        />
      </svg>
    </button>
  </div>
</body>
`;

exports[`IconButton renders the medium icon button correctly: IconButton Medium 1`] = `
<body>
  <div>
    <button
      class="icon-button medium "
    >
      <svg
        fill="currentColor"
        id="Plus"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="23 11 23 13 13 13 13 23 11 23 11 13 1 13 1 11 11 11 11 1 13 1 13 11 23 11"
        />
      </svg>
    </button>
  </div>
</body>
`;

exports[`IconButton renders the small icon button correctly: IconButton Small 1`] = `
<body>
  <div>
    <button
      class="icon-button small "
    >
      <svg
        fill="currentColor"
        id="Plus"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="23 11 23 13 13 13 13 23 11 23 11 13 1 13 1 11 11 11 11 1 13 1 13 11 23 11"
        />
      </svg>
    </button>
  </div>
</body>
`;
